Bug 141334 - Bullets and Numbering dialog: Gallery items are listed with full path name
Summary: Bullets and Numbering dialog: Gallery items are listed with full path name
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.3.0 target:7.2.0.0.beta2
Keywords:
Depends on:
Blocks: Bullets-Numbering-Dialog
  Show dependency treegraph
 
Reported: 2021-03-29 23:38 UTC by medmedin2014
Modified: 2021-07-30 09:54 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Inconsistent image selector in Bullets and Numbering (1.61 MB, video/mp4)
2021-03-29 23:38 UTC, medmedin2014
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medmedin2014 2021-03-29 23:38:01 UTC
Created attachment 170819 [details]
Inconsistent image selector in Bullets and Numbering

When I want to browse gallery for bullets, a big dialog that hides whole Writer UI appears on screen, and each item has full path name. See attached video for more info.

Operating System: Manjaro Linux
KDE Plasma Version: 5.21.3
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
Kernel Version: 5.4.105-1-MANJARO
OS Type: 64-bit
Graphics Platform: X11

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 4566bcbf03c1b7b0c1ce3a83fee1d195f0ff7059
CPU threads: 2; OS: Linux 5.11; UI render: default; VCL: kf5
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-03-22_14:46:06
Calc: threaded
Comment 1 Dieter 2021-04-13 11:48:17 UTC
I confirm it with

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 807d059d99e7b99fe45a712428befa17ffa44858
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Steps to reproduce
1. Open document in writer
2. Format > Bullets and Numbering > Customise
3. Number: Graphics | Graphics > Select > Gallery

Actual result: Dropdown list with all paths from ...\share\gallery\bullets

Expected result: Not sure, at least only icons 

Perhaps duplicate of bug 131713
cc: Heiko Tietze
Comment 2 Heiko Tietze 2021-04-13 14:03:06 UTC
Supposed to be solved with bug 130148. Maybe the patches are limited to Draw/Impress.
Comment 3 Justin L 2021-05-06 16:57:11 UTC
repro 7.2+ from master on Sat May 1 21:23:19 2021 +0100.

similar problem on another tab as detailed in bug 114070.
Comment 4 Commit Notification 2021-07-02 12:52:31 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a646ba6e5ed042756feac16b91739203793f1742

tdf#141334 - Only show the last name of the filename without its extension

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2021-07-07 19:58:39 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/4dc0c43e29e9825aab731edd77c3fc1cb7566639

tdf#141334 - Only show the last name of the filename without its extension

It will be available in 7.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Dieter 2021-07-30 09:54:21 UTC
VERIFIED with

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ac80ec817eb07c77a51bc0729985a473c734182e
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Andreas, thank you for fixing it!