tdf#141334 - Only show the last name of the filename without its extension

In the bullets and numbering dialog under customize, don't show the
filename including its extension in the context menu of the gallery.

Change-Id: Ia3d4277f5b074be78244f0599883f36385a40c8a